--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,6 @@
   {% include head.html %}
 
   <body class="home">
-
     <div class="main-content">
       <div id="preload">
         <div class="kd-bounce">
@@ -42,14 +41,8 @@
         </div>
       </div>
     </div>
-
-    <!-- Scripts -->
-    <script src="/assets/js/libs/jquery-1.12.4.min.js"></script>
-    <script src="/assets/js/libs/jquery.justifiedGallery.min.js"></script>
-    <script src="/assets/js/libs/jquery.magnific-popup.js"></script>
-    <script src="/assets/js/scripts.js"></script>
-    <!-- End Scripts -->
-
   </body>
+
+  {% include scripts.html %}
 
 </html>
