--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,10 +10,10 @@
   {%- seo -%}
 
   <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Roboto:400,600,700%7CLato:400,700' type='text/css' media='all' />
-  <link rel="stylesheet" type="text/css" href="/assets/css/libs/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="/assets/css/libs/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/assets/css/libs/justifiedGallery.min.css">
-	<link rel="stylesheet" type="text/css" href="/assets/css/libs/magnific-popup.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.7.0/css/justifiedGallery.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
