--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -10,7 +10,7 @@
         <nav>
           <ul class="menu-list">
 
-          {% for item in site.data.menu.pages %}
+          {% for item in site.data.menu.items %}
             {% if page.url == item.url or (page.url contains item.url and item.url != "/") %}
               <li class="active">
             {% else %}
