--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,14 +1,20 @@
 <div class="socials">
+  <a href="mailto:{{ site.email }}" title="Email">
+    <i class="fa fa-envelope"></i>
+  </a>
   <a href="https://www.facebook.com/{{ site.facebook_username }}" title="Facebook" target="_blank">
     <i class="fa fa-facebook"></i>
   </a>
   <a href="https://www.instagram.com/{{ site.instagram_username }}" title="Instagram" target="_blank">
     <i class="fa fa-instagram"></i>
   </a>
-  <a href="https://www.youtube.com/channel/{{ site.youtube_channel }}" title="Instagram" target="_blank">
+  <a href="https://www.youtube.com/channel/{{ site.youtube_channel }}" title="Youtube" target="_blank">
     <i class="fa fa-youtube"></i>
   </a>
-  <a href="https://www.github.com/{{ site.github_username }}" title="Instagram" target="_blank">
+  <a href="https://www.soundcloud.com/{{ site.soundcloud_username }}" title="Soundcloud" target="_blank">
+    <i class="fa fa-soundcloud"></i>
+  </a>
+  <a href="https://www.github.com/{{ site.github_username }}" title="Github" target="_blank">
     <i class="fa fa-github"></i>
   </a>
 </div>
