--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,6 +6,7 @@
 
 /*=========================================================================
 
+0. Custom CSS
 1. Reset CSS
 2. Typography
 3. General
@@ -27,6 +28,7 @@ $body_line_height: 24px;
 $selection_background: #222222;
 $selection_color: #f7f7f7;
 $link_hover_color: #000000;
+$link_hover_color_white: #ffffff;
 
 $title_font: 'Roboto', serif;
 $title_color: #ababab;
@@ -113,6 +115,11 @@ $post_background: #ffffff;
 		display: block;
 	}
 }
+
+/* =========== 0. Custom CSS  =========== */
+// .mfp-bottom-bar::before {
+//   content: <a href=''>"Download"</a>;
+// }
 
 /* =========== 1. Reset CSS  =========== */
 img, legend {
@@ -700,7 +707,7 @@ body {
 	padding-top: 50px;
 	a {
 		margin-right: 8px;
-		font-size: 14px;
+		font-size: 16px;
 	}
 	.fa-search {
 		color: #000000;
@@ -790,7 +797,7 @@ body {
 
 .project-item {
 	position: relative;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 
 	&:last-child {
 		margin-bottom: 0;
@@ -821,18 +828,19 @@ body {
 			@include transition2(opacity 0.3s ease-in-out, visibility 0.3s ease-in-out);
 
 			a {
-			background-color: #ffffff;
-			color: #000000;
-			font-size: 14px;
-			display: inline-block;
-			line-height: 24px;
-			padding-left: 10px;
-			padding-right: 10px;
-			opacity: 1;
-			letter-spacing: 1px;
+				background-color: #ffffff;
+				color: #000000;
+				font-size: 14px;
+				display: inline-block;
+				line-height: 24px;
+				padding-left: 10px;
+				padding-right: 10px;
+				opacity: 1;
+				letter-spacing: 1px;
 
 			&:hover {
-				opacity: 0.7;
+				color: #000000 !important;
+				opacity: 0.5;
 			}
 		}
 		}
@@ -1025,7 +1033,10 @@ body {
 	}
 }
 .post-footer {
-	margin-top: 30px;
+	// margin-top: 30px;
+	.socials {
+		padding-top: 20px;
+	}
 }
 .cat {
 	strong {
@@ -1078,6 +1089,10 @@ body {
 		color: #000000;
 		margin-left: 5px;
 		margin-right: 5px;
+
+		&:hover {
+			opacity: 0.4;
+		}
 	}
 }
 
@@ -1183,7 +1198,15 @@ body {
 		text-transform: uppercase;
 		font-size: 12px;
 		letter-spacing: 1px;
+
+		&:disabled {
+			opacity: 0.4;
+		}
 	}
+}
+
+.contact-message {
+	display: inline-block;
 }
 
 .post_404_not_found {
@@ -1370,7 +1393,7 @@ body {
 		padding-top: 30px;
 	}
 	.project-item {
-		margin-bottom: 30px;
+		margin-bottom: 20px;
 	}
 }
 
@@ -1417,7 +1440,7 @@ body {
 	}
 
 	.project-item {
-		margin-bottom: 20px;
+		margin-bottom: 15px;
 	}
 	#comments {
 		.comment-avatar {
