--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 
 	<link rel="icon" type="image/png" href="assets/img/favicon.png"/>
+	<title> {{ site.title }} | {{ page.title }} </title>
 
   {%- seo -%}
 
