--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,7 @@
-
-
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.6.3/js/jquery.justifiedGallery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 <script src="/assets/js/kelly.js"></script>
 <script src="/assets/js/contact.js"></script>
+<script src="/assets/js/script.js"></script>
