--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,1 +1,3 @@
-<iframe src="https://www.youtube-nocookie.com/embed/{{ include.uri }}?rel=0&iv_load_policy=3" width="100%" height="330" frameborder="0"></iframe>
+<div class="youtube-container">
+	<iframe class="youtube" src="https://www.youtube-nocookie.com/embed/{{ include.uri }}?rel=0&iv_load_policy=3&color=white"  frameborder="0" scrolling="no"></iframe>
+</div>
