--- a/assets/main.scss
+++ b/assets/main.scss
@@ -42,6 +42,7 @@ $menu_color: #000000;
 $menu_background: rgba(225, 225, 225, 0.1);
 $post_background: #ffffff;
 
+$margin-bottom: 20px;
 
 // Mixins
 @mixin translateXY($x, $y) {
@@ -116,12 +117,59 @@ $post_background: #ffffff;
 	}
 }
 
-/* =========== 0. Custom CSS  =========== */
-// .mfp-bottom-bar::before {
-//   content: <a href=''>"Download"</a>;
-// }
-
 /* =========== 1. Reset CSS  =========== */
+table {
+	width: 100%;
+}
+
+.concerts {
+	color: #000000;
+
+	tr {
+		border-top: 1px solid rgba(0,0,0,.2);
+		height: 80px;
+		text-align: center; 
+
+		&.past {
+			color: #828282;
+		}
+
+		&:hover {
+			background: #00000015;
+			@include transition(all 0.3s ease);
+
+			&.clickable-row {
+				cursor: pointer;
+			}
+		}
+	}
+
+	td {
+		font-size: 17px;
+	}
+}
+
+.fa-external-link {
+	padding: 0 10px 0 10px;
+}
+
+.youtube-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; /* The height of the item will now be 56% of the width. */
+  margin-bottom: $margin-bottom;
+}
+
+/* Adjust the iframe so it's rendered in the outer-width and outer-height of it's parent */
+.youtube-container  iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
 img, legend {
 	border: 0;
 }
@@ -336,7 +384,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 	color: $title_color;
 	font-weight: 400;
 	line-height: 1.2em;
-	margin-bottom: 20px;
+	margin-bottom: $margin-bottom;
 	margin-top: 0;
 }
 
@@ -428,7 +476,7 @@ blockquote {
 	position: relative;
 	border: 0;
 	padding: 0 0 0 40px;
-	margin: 20px 0;
+	margin: $margin-bottom 0;
 	font-style: italic;
 	overflow: hidden;
 	font-size: 13px;
@@ -511,7 +559,7 @@ input[type="search"], input[type="text"], input[type="url"], input[type="number"
 iframe {
 	border: 0;
 	max-width: 100%;
-	margin-bottom: 20px;
+	margin-bottom: $margin-bottom;
 }
 
 /* ===========  3. General  =========== */
@@ -527,7 +575,7 @@ body {
 	word-spacing: 1px;
 }
 .container {
-	max-width: 1000px;
+	// max-width: 1100px;
 }
 .mobile {
 	display: none;
@@ -607,7 +655,7 @@ body {
 	.main-menu {
 		.sub-menu {
 			padding-left: 0;
-			padding-right: 20px;
+			padding-right: $margin-bottom;
 			right: 100%;
 			left: auto;
 			text-align: right;
@@ -790,14 +838,14 @@ body {
 
 /* ===========  5. Projects  =========== */
 .projects {
-	padding-left: 80px;
-	padding-right: 50px;
+	padding-left: 60px;
+	padding-right: 60px;
 	padding-bottom: 50px;
 }
 
 .project-item {
 	position: relative;
-	margin-bottom: 20px;
+	margin-bottom: $margin-bottom;
 
 	&:last-child {
 		margin-bottom: 0;
@@ -1399,7 +1447,7 @@ body {
 		padding-top: 30px;
 	}
 	.project-item {
-		margin-bottom: 20px;
+		margin-bottom: $margin-bottom;
 	}
 }
 
