--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
 
       <div class="mobile">
         <div class="container">
-          <div class="menu-mobile">
+          <div id="menu" class="menu-mobile">
+            <!-- <div class="menu-mobile-background"></div> -->
             <span class="item item-1"></span>
             <span class="item item-2"></span>
             <span class="item item-3"></span>
