--- a/_layouts/single-post.html
+++ b/_layouts/single-post.html
@@ -4,5 +4,6 @@ layout: default
 
 {% include post.html title = page.title
                       img = page.img
+                      video = page.video
                       website = page.website
                       content = content  %}
