--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1384,7 +1384,7 @@ body {
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	background-color: #fff;
+	// background-color: #fff;
 	z-index: 9999999;
 	display: flex;
 	align-items: center;
