first version of website|

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,7 +3,7 @@
     <div class="table-cell">
 
       <div class="logo">
-        <a href="index.html"> {{ site.title}} </a>
+        {{ site.title}}
       </div>
 
       <div class="main-menu">
@@ -28,7 +28,7 @@
 
       <div class="copyright">
         <p>
-          Antonio-Radu Varga @ 2019. 
+          Antonio-Radu Varga @ 2019
         </p>
       </div>
 
