--- a/_includes/project.html
+++ b/_includes/project.html
@@ -3,7 +3,7 @@
 
 <div class="project-item aspect-ratio-photo">
 		{{ aTag }}
-		  <img class="aspect-img" src="{{ include.img }}" alt="no-img">
+		  <img class="aspect-img" src="{{ include.img }}" >
 		</a>
 	<h2 class="title">
 	  {{ aTag }}
