--- a/_layouts/single-post.html
+++ b/_layouts/single-post.html
@@ -2,8 +2,9 @@
 layout: default
 ---
 
-{% include post.html title = page.title
+{% include post.html  title = page.title
                       img = page.img
+                      aspect_photo = page.aspect_photo
                       video = page.video
                       website = page.website
                       content = content  %}
