--- a/assets/main.scss
+++ b/assets/main.scss
@@ -31,7 +31,7 @@ $selection_color: #f7f7f7;
 $link_hover_color: #000000;
 $link_hover_color_white: #ffffff;
 
-$title_font: 'Roboto', serif;
+$title_font: 'Lato', serif;
 $title_color: #4a4a4a;
 $sub_title_color: #a3a3a3;
 $event_past_color: #8c8c8c;
@@ -174,6 +174,10 @@ table {
 	position: absolute;
 	height: 100%;
 	object-fit: cover;
+}
+
+.post-img {
+	object-position: top;
 }
 
 .youtube-container {
