--- a/_includes/social.html
+++ b/_includes/social.html
@@ -8,7 +8,7 @@
   <a href="https://www.instagram.com/{{ site.instagram_username }}" title="Instagram" target="_blank">
     <i class="fa fa-instagram"></i>
   </a>
-  <a href="https://www.youtube.com/channel/{{ site.youtube_channel }}" title="Youtube" target="_blank">
+  <a href="https://www.youtube.com/{{ site.youtube_channel }}" title="Youtube" target="_blank">
     <i class="fa fa-youtube"></i>
   </a>
   <a href="https://www.soundcloud.com/{{ site.soundcloud_username }}" title="Soundcloud" target="_blank">
