--- a/_includes/social.html
+++ b/_includes/social.html
@@ -14,6 +14,9 @@
   <a href="https://www.soundcloud.com/{{ site.soundcloud_username }}" title="Soundcloud" target="_blank">
     <i class="fa fa-soundcloud"></i>
   </a>
+  <a href="https://{{ site.bandcamp_username }}.bandcamp.com" title="Bandcamp" target="_blank">
+    <i class="fa fa-bandcamp"></i>
+  </a>
   <a href="https://www.github.com/{{ site.github_username }}" title="Github" target="_blank">
     <i class="fa fa-github"></i>
   </a>
