--- a/_layouts/single-post.html
+++ b/_layouts/single-post.html
@@ -6,5 +6,7 @@ layout: default
                       img = page.img
                       aspect_photo = page.aspect_photo
                       video = page.video
+                      soundcloud = page.soundcloud
+                      bandcamp = page.bandcamp
                       website = page.website
                       content = content  %}
