--- a/_includes/post.html
+++ b/_includes/post.html
@@ -11,18 +11,35 @@
 			{% else %}
 
 				<div class="slick-items"> 
-
+					<!-- img -->
 					{% for item in include.img %}
 					<span>
 						<img src="{{ item }}">
 					</span>
 					{% endfor %}
 
+					<!-- video -->
 					{% for item in include.video %}
 					<span>
 						{% include youtube.html uri = item
-		  						  ratio = "hd" %}
-				</span>
+		  						  								ratio = "hd" %}
+					</span>
+					{% endfor %}
+
+					<!-- soundcloud -->
+					{% for item in include.soundcloud %}
+					<span>
+						{% include soundcloud.html uri = item
+		  						  									 ratio = "photo" %}
+					</span>
+					{% endfor %}
+
+					<!-- bandcamp -->
+					{% for item in include.bandcamp %}
+					<span>
+						{% include bandcamp.html uri = item
+		  						  								 ratio = "photo" %}
+					</span>
 					{% endfor %}
 
 				</div>
