--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,3 +1,3 @@
-<div class="youtube-container aspect-ratio-{{ include.ratio }}">
+<div class="aspect-ratio-container aspect-ratio-{{ include.ratio }}">
 	<iframe class="youtube" src="https://www.youtube-nocookie.com/embed/{{ include.uri }}?rel=0&iv_load_policy=3&color=white"  frameborder="0" scrolling="no"></iframe>
 </div>
