--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 
-	<link rel="icon" type="image/png" href="assets/img/sketch.jpeg"/>
+	<link rel="icon" type="image/png" href="/assets/img/favicon.jpeg"/>
 	<title> {{ site.title }} | {{ page.title }} </title>
 
   {%- seo -%}
