--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,13 +1,82 @@
-{% if include.href != null %}{%assign aTag = "<a href='" | append: include.href | append: "' class='clickable'>"%}{% endif %}
-{% if include.href == null %}{%assign aTag = "<a class='not-clickable'>"%}{% endif %}
+<article class="post {{ include.html-class }}">
 
-<div class="project-item aspect-ratio-photo">
-		{{ aTag }}
-		  <img class="aspect-img" src="{{ include.img }}" >
-		</a>
-	<h2 class="title">
-	  {{ aTag }}
-			{{ include.name }}
-		</a>
-	</h2>
-</div>
+		<div class="post-media">
+
+			{% if include.aspect-photo == true %}
+
+				<div class="aspect-ratio-photo" >
+						<img class="aspect-img post-img" src="{{ include.img }}">
+				</div>
+
+			{% else %}
+
+				<div class="slick-items"> 
+
+					<!-- video -->
+					{% for item in include.video %}
+					<span>
+						{% include youtube.html uri = item
+		  						  								ratio = "hd" %}
+					</span>
+					{% endfor %}
+
+					<!-- soundcloud -->
+					{% for item in include.soundcloud %}
+					<span>
+						{% include soundcloud.html uri = item
+		  						  									 ratio = "photo" %}
+					</span>
+					{% endfor %}
+
+					<!-- bandcamp -->
+					{% for item in include.bandcamp %}
+					<span>
+						{% include bandcamp.html uri = item
+		  						  								 ratio = "photo" %}
+					</span>
+					{% endfor %}
+					
+					<!-- img -->
+					{% for item in include.img %}
+					<span>
+						<img src="{{ item }}">
+					</span>
+					{% endfor %}
+
+				</div>
+
+			{% endif %}
+
+		</div>
+
+	<div class="post-content">
+		<div class="title-div">
+			<span class="title-span"> 
+				{% if include.logo %}
+					<img class="title-logo" src="{{ include.logo }}"></img>
+				{% endif %}
+
+				<h2 class="title"> {{ include.title }} </h2>
+			</span>
+			{% if include.download %}
+				<a href="{{ include.download }}" class="title-link fa fa-download"></a>
+			{% endif %}
+			{% if include.website %}
+				<a href="{{ include.website }}" class="title-link fa fa-external-link" target="_blank"></a>
+			{% endif %}
+		 </div>
+
+		{% if include.website %}
+			<div class="post-details">
+				<a href="{{ include.website }}" class="post-url" target="_blank">{{ include.website }}</a>
+			</div>
+		{% endif %}
+
+		<!-- The Content -->
+		<div class="the-content">
+			{{ include.content }}
+		</div>
+		<!-- End The Content -->
+
+	</div>
+</article>
