--- a/_layouts/single-project.html
+++ b/_layouts/single-project.html
@@ -7,6 +7,7 @@ layout: default
 	                      logo = page.logo
 	                      download = page.download
 	                      html-class = page.html-class
+	                      counter-key = page.counter-key
 	                      aspect-photo = page.aspect-photo
 	                      video = page.video
 	                      soundcloud = page.soundcloud
