--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1111,18 +1111,32 @@ body {
 		.title-download {
 			float: right;
 
-			a {
-				color: #000000;
-				font-size: 32px;
-				float: right;
+			.download-btn {
+				background-color: #0D0D0D;
+			    border-radius: 5px;
+			    color: white;
+			    font-size: 16px;
+			    font-weight: bold;
+			    padding: 13px 15px 13px 15px;
+
+			    &:hover {
+					opacity: 0.7;
+			    	color: white !important;
+				}
 
 
-				&:hover {
-					opacity: 0.5;
+				i {
+					font-size: 20px;
+				}
+
+				b {
+					margin-left: 8px;
 				}
 			}
 
+
 			p {
+				margin-top: 14px;
 				font-size: 11px;
 				text-align: center;
 				color: $sub_title_color;
