trying out new fundraisers

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -24,7 +24,7 @@
         </nav>
       </div>
 
-      {%- include social.html -%}
+      {% include social.html %}
 
       <div class="copyright">
         <p>
