--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1227,7 +1227,6 @@ body {
 	}
 }
 
-
 .the-content {
 	margin-top: 20px;
 	p {
@@ -1251,6 +1250,17 @@ body {
 		}
 	}
 }
+
+.the-fundraisers {
+	margin-top: 20px;
+}
+.fundraiser {
+	margin-top: -20px;
+}
+.embed-fundraiser {
+	margin-top: 10px;
+}
+
 .post-footer {
 	// margin-top: 30px;
 	.socials {
