last fundraiser mods

--- a/_includes/project.html
+++ b/_includes/project.html
@@ -81,7 +81,7 @@
 
 		<!-- The Content -->
 		<div class="the-content">
-			{{ include.project.content | markdownify }}
+			{{ include.content }}
 		</div>
 		<!-- End The Content -->
 
