--- a/_layouts/single-project.html
+++ b/_layouts/single-project.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 
-{% include project.html project = page %}
+{% include project.html project = page
+						content = content %}
 
 
 {% if page.fundraiser != nil %}
