--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,3 +8,4 @@
 <script src="/assets/js/kelly.js"></script>
 <script src="/assets/js/contact.js"></script>
 <script src="/assets/js/script.js"></script>
+<script src="/assets/js/changelog.js"></script>
