--- a/_includes/changelog.html
+++ b/_includes/changelog.html
@@ -2,22 +2,12 @@
 	<div class="post-content">
 		<div class="title-div">
 			<span class="title-span">
-				<h2 class="title"> {{ include.changelog.title }} </h2>
+				<h2 class="title"> Changelog </h2>
 			</span>
 		 </div>
 
-		 <div class="the-content">
-
-			{{ include.changelog.content | markdownify }}
-
-		</div>
-
-		<div class="the-fundraisers">
-			{% for item in include.fundraiser.fundraisers %}
-			<span>
-				{% include fundraiser.html uri = item %}
-			</span>
-			{% endfor %}
+		<div class="the-changelog" url="/assets/changelog/{{ include.changelog }}.xml" >
+			
 		</div>
 
 	</div>
