--- a/_includes/fundraisers.html
+++ b/_includes/fundraisers.html
@@ -1,13 +1,23 @@
-<article class="post changelog">
+<article class="post fundraiser">
 	<div class="post-content">
 		<div class="title-div">
 			<span class="title-span">
-				<h2 class="title"> Changelog </h2>
+				<h2 class="title"> {{ include.fundraiser.title }} </h2>
 			</span>
 		 </div>
 
-		<div class="the-changelog">
-			
+		 <div class="the-content">
+
+			{{ include.fundraiser.content | markdownify }}
+
+		</div>
+
+		<div class="the-fundraisers">
+			{% for item in include.fundraiser.fundraisers %}
+			<span>
+				{% include fundraiser.html uri = item %}
+			</span>
+			{% endfor %}
 		</div>
 
 	</div>
