add sheet music

--- a/_includes/changelog.html
+++ b/_includes/changelog.html
@@ -1,4 +1,4 @@
-<article class="post changelog">
+<article class="post changelog" id="changelog">
 	<div class="post-content">
 		<div class="title-div">
 			<span class="title-span">
