--- a/_includes/fundraisers.html
+++ b/_includes/fundraisers.html
@@ -1,4 +1,4 @@
-<article class="post fundraiser">
+<article class="post fundraiser" id="feature-requests">
 	<div class="post-content">
 		<div class="title-div">
 			<span class="title-span">
