--- a/_includes/musescore.html
+++ b/_includes/musescore.html
@@ -1,1 +1,1 @@
-<iframe width="100%" height="800px" src="https://musescore.com/user/28061512/scores/6429215/s/4T9PqT/embed" frameborder="0" allowfullscreen allow="autoplay; fullscreen"></iframe>
+<iframe width="100%" height="800px" src="https://musescore.com/{{ include.uri }}/embed" frameborder="0" allowfullscreen allow="autoplay; fullscreen"></iframe>
