--- a/_includes/project.html
+++ b/_includes/project.html
@@ -61,7 +61,7 @@
 			{% if include.project.download %}
 				<div class="title-download">
 					<a href="{{ include.project.download }}" class="download-btn" counter-key="{{ include.project.counter-key }}">
-						<i class="fa fa-download"></i>
+						<i class="fa fa-apple"></i>
 						<b> Download </b>
 					</a>
 					<p class="counter" counter-key="{{ include.project.counter-key }}"> </p>
