--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,3 +10,4 @@
 <script src="/assets/js/contact.js"></script>
 <script src="/assets/js/script.js"></script>
 <script src="/assets/js/changelog.js"></script>
+<script src="/assets/js/table.js"></script>
