--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1132,7 +1132,7 @@ body {
 		.title-download {
 			float: right;
 
-			.download-btn {
+			.download-btn{
 				background-color: #0D0D0D;
 			    border-radius: 5px;
 			    color: white;
@@ -1201,6 +1201,19 @@ body {
 		b {
 			margin-left: 8px;
 		}
+	}
+
+	.youtube-btn {
+	    font-size: 30px;
+	    margin-right: 15px;
+
+	    i {
+	    	color: black;
+
+	    	&:hover {
+	    		color: #868686;
+	    	}
+	    }
 	}
 
 
