--- a/_includes/project.html
+++ b/_includes/project.html
@@ -49,41 +49,30 @@
 
 		</div>
 
-	<div class="post-content">
-		<div class="title-div">
-			<span class="title-span"> 
-				{% if include.project.logo %}
-					<img class="title-logo" src="{{ include.project.logo }}"></img>
-				{% endif %}
+	{% if include.has-tabs == true %}
 
-				<h2 class="title"> {{ include.project.title }} </h2>
-			</span>
-			{% if include.project.download %}
-				<div class="title-download">
-					<a href="{{ include.project.download }}" class="download-btn" counter-key="{{ include.project.counter-key }}">
-						<i class="fa fa-apple"></i>
-						<b> Download </b>
-					</a>
-					<p class="counter" counter-key="{{ include.project.counter-key }}"> </p>
-				</div>
-				
-			{% endif %}
-			{% if include.project.website %}
-				<a href="{{ include.project.website }}" class="title-link fa fa-external-link" target="_blank"></a>
-			{% endif %}
-		 </div>
-
-		{% if include.project.website %}
-			<div class="post-details">
-				<a href="{{ include.project.website }}" class="post-url" target="_blank">{{ include.project.website }}</a>
-			</div>
-		{% endif %}
-
-		<!-- The Content -->
-		<div class="the-content">
-			{{ include.content }}
+		<div class="tabs">
+		  <button tab-id="content" class="tab"> App </a>
+		  <button tab-id="feature-requests" class="tab"> Feature Requests </a>
+		  <button tab-id="changelog" class="tab"> Changelog </a>
 		</div>
-		<!-- End The Content -->
 
-	</div>
+	{% endif %}
+
+	{% include content-project.html project = include.project
+								    content = content %}
+
+
+	{% if include.has-tabs == true %}
+		{% assign fund = site.fundraisers | where:"slug", page.fundraiser-tag  | first %}
+		{% include content-feature-requests.html project = page
+												 fundraiser = fund %}
+
+		{% include content-changelog.html project = page
+										  changelog = page.changelog %}
+
+	{% endif %}
+							 
+
+
 </article>
