--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,6 +4,7 @@
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/autosize@4.0.2/dist/autosize.min.js"></script>
+<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
 
 <script src="/assets/js/utils.js"></script>
 <script src="/assets/js/kelly.js"></script>
@@ -11,3 +12,7 @@
 <script src="/assets/js/script.js"></script>
 <script src="/assets/js/changelog.js"></script>
 <script src="/assets/js/table.js"></script>
+<script src="/assets/js/slick-swipe.js"></script>
+<script src="/assets/js/counter.js"></script>
+<script src="/assets/js/tabs.js"></script>
+<script src="/assets/js/comments.js"></script>
