--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -22,4 +22,4 @@ description: Sheet music
 
 {%- include musescore.html uri = page.musescore-uri -%}
 
-<div class="commentbox"></div>
+<div class="commentbox commentbox-score"></div>
