--- a/_layouts/software-project.html
+++ b/_layouts/software-project.html
@@ -6,4 +6,4 @@ layout: default
 						content = content
 						has-tabs = true %}
 
-<div class="commentbox"></div>
+<div class="commentbox commentbox-software"></div>
