--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1096,7 +1096,7 @@ body {
 
 /* ===========  6. Posts  =========== */
 .post {
-	margin-bottom: 40px;
+	// margin-bottom: 40px;
 
 	&:last-child {
 		margin-bottom: 0;
@@ -1288,6 +1288,10 @@ body {
 			}
 		}
 	}
+}
+
+.commentbox {
+	margin-top: 14px;
 }
 
 .tab {
