add comments to max for live

--- a/_layouts/software-project.html
+++ b/_layouts/software-project.html
@@ -3,7 +3,6 @@ layout: default
 ---
 
 {% include project.html project = page
-						content = content
-						has-tabs = true %}
+						content = content %}
 
 <div class="commentbox commentbox-software"></div>
