--- a/_includes/project.html
+++ b/_includes/project.html
@@ -49,7 +49,7 @@
 
 		</div>
 
-	{% if include.has-tabs == true %}
+	{% if include.project.has-tabs == true %}
 
 		<div class="tabs">
 		  <button tab-id="content" class="tab"> App </a>
@@ -63,7 +63,7 @@
 								    content = content %}
 
 
-	{% if include.has-tabs == true %}
+	{% if include.project.has-tabs == true %}
 		{% assign fund = site.fundraisers | where:"slug", page.fundraiser-tag  | first %}
 		{% include content-feature-requests.html project = page
 												 fundraiser = fund %}
