--- a/_includes/content-project.html
+++ b/_includes/content-project.html
@@ -7,13 +7,24 @@
 
 			<h2 class="title"> {{ include.project.title }} </h2>
 		</span>
+
 		{% if include.project.download %}
 			<div class="title-download">
-				<a href="{{ include.project.download }}" class="download-btn" counter-key="{{ include.project.counter-key }}">
-					<i class="fa fa-apple"></i>
-					<b> Download </b>
-				</a>
-				<p class="counter" counter-key="{{ include.project.counter-key }}"> </p>
+				<span class="download-span">
+					<p class="counter" counter-key="{{ include.project.counter-key }}"> </p>
+					<a href="{{ include.project.download }}" class="download-btn" counter-key="{{ include.project.counter-key }}">
+						<i class="fa fa-apple"></i>
+						<b> Download </b>
+					</a>
+				</span>
+
+				<span class="download-span windows">
+					<p class="counter" counter-key="{{ include.project.counter-key-windows }}"> </p>
+					<a href="{{ include.project.download-windows }}" class="download-btn windows" counter-key="{{ include.project.counter-key-windows }}">
+						<i class="fa fa-windows"></i>
+						<b> Download </b>
+					</a>
+				</span>
 			</div>
 			
 		{% endif %}
