--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1132,41 +1132,41 @@ body {
 			}
 		}
 
-		.title-download {
-			float: right;
+		// .title-download {
+		// 	float: right;
 
-			.download-btn{
-				background-color: #0D0D0D;
-			    border-radius: 5px;
-			    color: white;
-			    font-size: 16px;
-			    font-weight: bold;
-			    padding: 13px 15px 13px 15px;
+		// 	.download-btn{
+		// 		background-color: #0D0D0D;
+		// 	    border-radius: 5px;
+		// 	    color: white;
+		// 	    font-size: 16px;
+		// 	    font-weight: bold;
+		// 	    padding: 13px 15px 13px 15px;
 
-			    &:hover {
-					opacity: 0.7;
-			    	color: white !important;
-				}
-
-
-				i {
-					font-size: 20px;
-				}
-
-				b {
-					margin-left: 8px;
-				}
-			}
+		// 	    &:hover {
+		// 			opacity: 0.7;
+		// 	    	color: white !important;
+		// 		}
 
 
-			p {
-				margin-top: 14px;
-				font-size: 11px;
-				text-align: center;
-				color: $sub_title_color;
-			}
+		// 		i {
+		// 			font-size: 20px;
+		// 		}
 
-		}
+		// 		b {
+		// 			margin-left: 8px;
+		// 		}
+		// 	}
+
+
+		// 	p {
+		// 		margin-top: 14px;
+		// 		font-size: 11px;
+		// 		text-align: center;
+		// 		color: $sub_title_color;
+		// 	}
+
+		// }
 	}
 	.aspect-ratio-container  iframe {
 		margin-bottom: 0;
@@ -1183,8 +1183,25 @@ body {
 .title-download {
 	float: right;
 
+	.download-span {
+		display: block;
+		margin-bottom: 16px;
+		
+		p {
+			display: inline-block;
+			margin-right: 8px;
+			text-align: right;
+		}
+
+		&.windows {
+		    float: right;
+		}
+	}
+
 	.download-btn {
-		background-color: #0D0D0D;
+		display: inline-block;
+		width: 137px;
+		background-color: $sub_title_color;
 	    border-radius: 5px;
 	    color: white;
 	    font-size: 16px;
@@ -1196,6 +1213,9 @@ body {
 	    	color: white !important;
 		}
 
+		&.selected {
+			background-color: #0D0D0D;
+		}
 
 		i {
 			font-size: 20px;
@@ -1294,9 +1314,27 @@ body {
 	margin-top: 14px;
 }
 
+.title-os {
+	float: right;
+}
+
+.os {
+	margin-left: 20px;
+	font-size: 38px;
+
+	&.selected {
+		color: #000000 !important;
+	}
+
+	&:hover {
+		cursor: pointer;
+	}
+}
+
 .tab {
+	white-space: nowrap;
 	height: 35px;
-	width: 33.33%;
+	width: 25%;
 	border: 0px;
 	font-weight: 700;
 	font-size: 15px;
@@ -1345,7 +1383,7 @@ body {
 	margin-top: 10px;
 }
 
-.the-changelog {
+.the-changelog, .the-faq {
 	.item {
 		margin-top: 30px;
 
