--- a/_includes/fundraiser.html
+++ b/_includes/fundraiser.html
@@ -1,1 +1,13 @@
-<embed class="embed-fundraiser" height="160px" width="100%" src="https://www.gofundme.com/mvc.php?route=widgets/mediawidget&fund={{ include.uri }}&image=0&coinfo=0&preview=1" type="text/html" />
+<div class="fundraiser-item ">
+
+	<embed class="embed-fundraiser {% if include.completed %} fundraiser-completed {% endif %}" height="160px" width="80%" src="https://www.gofundme.com/mvc.php?route=widgets/mediawidget&fund={{ include.uri }}&image=0&coinfo=0&preview=1" type="text/html" />
+
+	{% if include.completed %}
+		<i class="fa fa-check fundraiser-icon" ></i>
+	{% endif %}
+
+	{% if include.progress %}
+		<i class="fa fa-spinner fundraiser-icon" ></i>
+	{% endif %}
+</div>
+
