--- a/_includes/content-faq.html
+++ b/_includes/content-faq.html
@@ -7,8 +7,9 @@
 		<h2 class="title"> FAQ </h2>
 	</span>
 
-	<div class="the-faq" url="/assets/faq/{{ include.project.faq }}.xml">
+	<div class="the-faq" url="/assets/faq/{{ include.project.faq }}.xml" > </div>
+
+	<div class="the-new-quesions"> You can ask new questions <a href="{{ include.project.discussion-url }}" target="_blank"> HERE </a>. </div>
 		
-	</div>
 
 </div>
