--- a/_includes/content-feature-requests.html
+++ b/_includes/content-feature-requests.html
@@ -14,10 +14,23 @@
 	</div>
 
 	<div class="the-fundraisers">
+
+		{% for item in include.fundraiser.completed %}
+			<span>
+				{% include fundraiser.html uri = item completed = true %}
+			</span>
+		{% endfor %}
+
+		{% for item in include.fundraiser.in-progress %}
+			<span>
+				{% include fundraiser.html uri = item progress = true %}
+			</span>
+		{% endfor %}
+
 		{% for item in include.fundraiser.fundraisers %}
-		<span>
-			{% include fundraiser.html uri = item %}
-		</span>
+			<span>
+				{% include fundraiser.html uri = item %}
+			</span>
 		{% endfor %}
 	</div>
 
