--- a/_includes/project.html
+++ b/_includes/project.html
@@ -53,8 +53,9 @@
 
 		<div class="tabs">
 		  <button tab-id="content" class="tab"> App </a>
-		  <button tab-id="feature-requests" class="tab"> Feature Requests </a>
 		  <button tab-id="faq" class="tab"> FAQ </a>
+		  <button tab-id="feature-requests" class="tab"> Feature Requests </a>
+		  <button tab-id="forum" class="tab"> Discussion </a>
 		  <button tab-id="changelog" class="tab"> Changelog </a>
 		</div>
 
@@ -64,13 +65,15 @@
 								    content = content %}
 
 
-	{% if include.project.has-tabs == true %}
+	{% if include.project.has-tabs %}
 
 		{% assign fund = site.fundraisers | where:"slug", page.fundraiser-tag  | first %}
 		{% include content-feature-requests.html project = page
 												 fundraiser = fund %}
 
 		{% include content-faq.html project = page %}
+
+		{% include content-discussion.html project = page %}
 
 		{% include content-changelog.html project = page %}
 
