--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,6 +5,7 @@
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/autosize@4.0.2/dist/autosize.min.js"></script>
 <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+<script src="https://www.powr.io/powr.js?platform=html"></script>
 
 <script src="/assets/js/utils.js"></script>
 <script src="/assets/js/kelly.js"></script>
