--- a/_includes/content-faq.html
+++ b/_includes/content-faq.html
@@ -9,7 +9,7 @@
 
 	<div class="the-faq" url="/assets/faq/{{ include.project.faq }}.xml" > </div>
 
-	<div class="the-new-quesions"> You can ask new questions <a href="{{ include.project.discussion-url }}" target="_blank"> HERE </a>. </div>
+	<div class="the-new-quesions"> You can postt new questions <a href="{{ include.project.discussion-url }}" target="_blank"> HERE </a>. </div>
 		
 
 </div>
