--- a/_layouts/software-project.html
+++ b/_layouts/software-project.html
@@ -9,5 +9,7 @@ description: Software Project
 <!-- <div class="commentbox commentbox-software"></div> -->
 
 {% if page.reviews-id  %}
-	<div class="powr-reviews" id="{{ page.reviews-id }}"></div>
+	<div id="reviews">
+		<div class="powr-reviews" id="{{ page.reviews-id }}"></div>
+	</div>
 {% endif %}
